// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence with the @cubejs-backend/questdb-driver for the Customers.RollingExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
  ],
  Array [
    "createSchemaIfNotExists",
    "uploadTableWithIndexes",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/questdb-driver for the ECommerce.SimpleAnalysisExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
  ],
  Array [
    "uploadTableWithIndexes",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/questdb-driver for the ECommerce.TimeAnalysisExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
  ],
  Array [
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
  ],
]
`;
